--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,22 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+button {
+  border: none;
+  cursor: pointer;
+}
+
 .App {
+  position: relative;
   display: flex;  
   flex-direction: column;
   justify-content: space-between;
   max-width: 390px;
   height: 100vh;
   margin: 0 auto;
-  background-color: darkblue;
 }
 
 .container {
@@ -14,17 +25,27 @@
   background-color: rosybrown;
 }
 
-#map {
-  position: relative;
-  width: 100%;
-  height: 100%;
+.searchboxform {
+  position: absolute;
+  left: 16px; top: 16px;
+  display: flex;
+  justify-content: space-between;
+  z-index: 20;
 }
 
-.location {
+.search {
+  width: 100%;
+}
+
+
+
+.userPositionBtn {
   position: absolute;
-  right: 16px; bottom: 16px;
+  right: 16px; bottom: calc(16px + 92px);
   width: 58px; height: 58px;
-  background-color: blue;
+  border-radius: 50%;
+  background-color: #ccc;
+
   z-index: 20;
 }
 
