--- a/src/assets/css/App.css
+++ b/src/assets/css/App.css
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   max-width: 390px;
-  height: 100vh;
+  height: 100dvh;
   margin: 0 auto;
 }
 
@@ -11,7 +11,8 @@
   position: relative;
   width: 100%;
   height: calc(100% - var(--gnb-H));
-  background-color: darkgray;
+  padding-top: env(safe-area-inset-top);
+  padding-top: constant(safe-area-inset-top);
 }
 
 .userPositionBtn {
@@ -19,25 +20,26 @@
   right: var(--spacer-5); bottom: var(--spacer-5);
   width: 58px; height: 58px;
   border-radius: 50%;
-  background-color: #ccc;
+  background-color: #222;
 
   z-index: 20;
 }
 
-ul.gnb {
-  position: absolute;
-  bottom: 0; left: 0;
+.gnb {
   display: flex;
   width: 100%;
   height: var(--gnb-H);
+  padding-bottom: env(safe-area-inset-bottom);
+  padding-bottom: constant(safe-area-inset-bottom);
   background-color: #fff;
 
   z-index: 20;
 }
 
-ul.gnb > li {
+.gnb > a {
   flex: 1;
   text-align: center;
+  line-height: var(--gnb-H);
 }
 
 .gnbLink {
@@ -47,5 +49,14 @@ ul.gnb > li {
   padding-top: var(--spacer-5);
   color: #222;
   text-decoration: none;
-  background-color: darkcyan;
+}
+
+.Home {
+  width: 100%;
+  height: 100%;
+}
+
+.SearchEntry {
+  display: block;
+  height: var(--top-btn);
 }
