--- a/src/assets/style/reset.css
+++ b/src/assets/style/reset.css
@@ -31,11 +31,6 @@ button,
     box-sizing: border-box;
 }
 
-button {
-border: none;
-cursor: pointer;
-}
-
 dl,
 ul,
 ol,
@@ -59,6 +54,10 @@ button {
     cursor: pointer;
 }
 
+address {
+    font-style: normal;
+}
+
 html, body{
     -webkit-text-size-adjust : none; 
     -ms-text-size-adjust : none; 
@@ -68,8 +67,14 @@ html, body{
 
 html{
     font-size: 16px;
+    color: var(--gray-90);
 }
 
 .container {
     padding: 0 var(--spacer-5);
+}
+
+a {
+    color: inherit;
+    text-decoration: none;
 }
