--- a/src/assets/style/reset.css
+++ b/src/assets/style/reset.css
@@ -31,6 +31,18 @@ button,
     box-sizing: border-box;
 }
 
+html, body{
+    -webkit-text-size-adjust : none; 
+    -ms-text-size-adjust : none; 
+    -moz-text-size-adjust : none; 
+    -o-text-size-adjust : none;
+}
+
+html{
+    font-size: 16px;
+    color: var(--gray-90);
+}
+
 dl,
 ul,
 ol,
@@ -58,23 +70,15 @@ address {
     font-style: normal;
 }
 
-html, body{
-    -webkit-text-size-adjust : none; 
-    -ms-text-size-adjust : none; 
-    -moz-text-size-adjust : none; 
-    -o-text-size-adjust : none;
-}
-
-html{
-    font-size: 16px;
-    color: var(--gray-90);
+a {
+    color: inherit;
+    text-decoration: none;
 }
 
 .container {
     padding: 0 var(--spacer-5);
 }
 
-a {
-    color: inherit;
-    text-decoration: none;
+.contentsBox > div {
+    height: 100%;
 }
