--- a/src/assets/style/App.css
+++ b/src/assets/style/App.css
@@ -1,19 +1,23 @@
 .App {
   position: relative;
-  display: flex;
-  flex-direction: column;
   max-width: 390px;
   height: 100dvh;
   margin: 0 auto;
 }
 
-.contentsBox {
+.App > div {
+  height: 100%;
+}
+
+.contentsBoxWithGnb {
+  display: flex;
   position: relative;
-  width: 100%;
   height: calc(100% - var(--gnb-H));
+  flex-direction: column;
   padding-top: env(safe-area-inset-top);
   padding-top: constant(safe-area-inset-top);
 }
+
 
 .userPositionBtn {
   position: absolute;
@@ -22,25 +26,26 @@
   border-radius: 50%;
   background-color: #222;
 
-  z-index: 20;
+  z-index: 10;
   
   /* 아이콘 속성 */
   color: var(--gray-0);
   font-size: 36px;
 }
 
-.gnb {
+.Gnb {
   display: flex;
   width: 100%;
   height: var(--gnb-H);
   padding-bottom: env(safe-area-inset-bottom);
   padding-bottom: constant(safe-area-inset-bottom);
   background-color: #fff;
-
-  z-index: 20;
+  box-shadow: var(--shadow-popup);
+  
+  z-index: 10;
 }
 
-.gnb > a {
+.Gnb > a {
   flex: 1;
   text-align: center;
   line-height: var(--gnb-H);
