--- a/src/assets/style/pages/MyListsBoard.css
+++ b/src/assets/style/pages/MyListsBoard.css
@@ -12,7 +12,7 @@ h2 {
     background-color: rgb(155, 206, 255);
 }
 
-.MyList {
+.MyListsItem {
     display: flex;
     justify-content: space-between;
     column-gap: 10px;
@@ -20,15 +20,17 @@ h2 {
     border-bottom: 1px solid #ccc;
 }
 
+.MyListsItem > a {
+    display: flex;
+    flex: 1;
+    column-gap: 10px;
+}
+
 .listIcon {
     display: block;
     width: 30px; height: 30px;
     border-radius: 50%;
-    background-color: darkgoldenrod;
-}
-
-.listInfo {
-    width: 80%;
+    /* background-color: darkgoldenrod; */
 }
 
 .listName {
@@ -37,4 +39,18 @@ h2 {
 
 .listEditBtn {
     display: block;
+    width: 40px;
+}
+
+/* PlacesList */
+.PlacesListPopup {
+    position: absolute;
+    bottom: 0; left: 0;
+    width: 100%;
+    min-height: 500px;
+    border-radius: 30px 30px 0 0;
+    background-color: var(--gray-0);
+    box-shadow: var(--shadow-popup);
+
+    z-index: 10;
 }
