--- a/src/assets/style/variables.css
+++ b/src/assets/style/variables.css
@@ -40,4 +40,6 @@
     --gray-80: #2d2d2d;
     --gray-90: #1d1d1d;
     --gray-100: #000000;
+
+    --shadow-popup: 0 -4px 6px rgba(0, 0, 0, .08);
   }
