--- a/src/assets/style/pages/SearchPage.css
+++ b/src/assets/style/pages/SearchPage.css
@@ -10,18 +10,18 @@
     
 }
 
-.searchForm {
+.SearchForm {
     width: 100%;
     height: 100%;
 }
 
-.backBtn {
-    width: var(--spacer-9);
-}
-
-.search {
+.searchInput {
     width: 100%;
     height: 100%;
+}
+
+.searchList {
+    margin-top: calc(var(--size-btn-small) + var(--spacer-5));
 }
 
 .searchList > li {
