--- a/src/assets/style/variables.css
+++ b/src/assets/style/variables.css
@@ -23,6 +23,8 @@
     --size-btn-large: 50px;
     --size-btn-xlarge: 57px;
     
+    --size-icon: 24px;
+
     --gnb-H: 64px;
 
     --top-btn: 48px;
