--- a/src/assets/style/components/Components.css
+++ b/src/assets/style/components/Components.css
@@ -11,13 +11,21 @@
 
   /* === BackButton === */
   .BackButton {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     width: 100%;
     height: 100%;
   }
   
+  .BackButtonIcon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: var(--size-btn-medium);
+    height: var(--size-btn-medium);
+    font-size: var(--size-icon);
+    color: var(--gray-70);
+  }
+  
+  /* === SearchBar === */
 .SearchBar {
   position: absolute;
   left: var(--spacer-5); top: var(--spacer-5);
@@ -46,7 +54,7 @@
   overflow: hidden;
   width: 300px;
   height: 100%;
-  line-height: var(--size-btn-medium);;
+  line-height: var(--size-btn-medium);
 }
 
 .SearchForm {
