--- a/src/assets/style/variables.css
+++ b/src/assets/style/variables.css
@@ -46,4 +46,8 @@
     --shadow-popup: 0 -4px 6px rgba(0, 0, 0, .08);
     --shadow-btn-top: 0 2px 4px rgba(0, 0, 0, 0.2), 0 -1px 0px rgba(0, 0, 0, 0.02);
     --shadow-btn-on-map: 0 1px 2px rgba(60, 64, 67, 0.3), 0 1px 3px 1px rgba(60, 64, 67, 0.15);
+
+    /* 모양 */
+    --radius-round : 500px;
+    --radius-square : 8px;
   }
