--- a/src/assets/style/components/Components.css
+++ b/src/assets/style/components/Components.css
@@ -1,3 +1,31 @@
+  /* === Gnb === */
+  .Gnb {
+    display: flex;
+    width: 100%;
+    height: var(--gnb-H);
+    background-color: #fff;
+    box-shadow: var(--shadow-popup);  
+
+    z-index: 10;
+  }
+  
+  .Gnb > a {
+    flex: 1;
+    text-align: center;
+    line-height: var(--gnb-H);
+  }
+  
+  .gnbLink {
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding-top: var(--spacer-5);
+    color: #222;
+    text-decoration: none;
+  }
+
+
+  /* === Map === */
 .Map {
     /* position: relative; */
     width: 100%;
@@ -8,6 +36,7 @@
     width: 100%;
     height: 100%;
   }
+
 
   /* === BackButton === */
   .BackButton {
@@ -25,6 +54,7 @@
     color: var(--gray-70);
   }
   
+
   /* === SearchBar === */
 .SearchBar {
   position: absolute;
