--- a/src/assets/style/pages/List.css
+++ b/src/assets/style/pages/List.css
@@ -13,6 +13,7 @@ h2 {
 }
 
 .MyListsItem {
+    position: relative;
     display: flex;
     justify-content: space-between;
     column-gap: 10px;
@@ -82,4 +83,87 @@ h2 {
     height: 100%;
     margin-left: calc(var(--size-btn-medium));
     line-height: var(--size-btn-medium);
+}
+
+.popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* 배경 흐리게 */
+    display: flex;
+    justify-content: center;
+    align-items: end;
+    z-index: var(--z-index-fixed);
+  } 
+
+.popupContent {
+    margin-bottom: var(--spacer-5);
+    padding: var(--spacer-6);
+    width: calc(100% - var(--spacer-5) * 2);
+    background: var(--gray-0);
+    border-radius: var(--radius-square);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+
+.popupActions {
+    display: flex;
+    justify-content: space-between;
+    margin-top: var(--spacer-6);
+}
+
+.popupActions > button {
+    width: calc(50% - var(--spacer-2));
+}
+
+.listNameInput {
+    width: 100%;
+    padding: 10px;
+    margin-top: 10px;
+    border: 1px solid var(--gray-50);
+    border-radius: 5px;
+    font-size: var(--font-size-title-lg);
+    font-weight: 600;
+}
+
+.colorPickerTitle {
+    margin-top: var(--spacer-5);
+    font-size: var(--font-size-title-sm);
+}
+
+.colorPicker {
+    display: flex;
+    justify-content: space-between;
+    margin-top: var(--spacer-4)
+}
+
+.colorBtn {
+    width: var(--size-btn-small);
+    height: var(--size-btn-small);
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    outline: none;
+}
+
+.colorBtn.selected {
+    scale: 1.4;
+    border: 3px solid black;
+}
+
+.saveBtn, .cancelBtn {
+    padding: 10px 20px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.cancelBtn {
+    color: var(--gray-50);
+}
+
+.saveBtn {
+    background-color: var(--success-40);
+    color: white;
 }
