--- a/src/assets/style/components/Components.css
+++ b/src/assets/style/components/Components.css
@@ -1,28 +1,41 @@
-  /* === Gnb === */
-  .Gnb {
-    display: flex;
-    width: 100%;
-    height: var(--gnb-H);
-    background-color: #fff;
-    box-shadow: var(--shadow-popup);  
+/* === button === */
+.button.default {
+  display: block;
+  height: var(--size-btn-medium);
+  border: 1px solid var(--gray-30);
+}
 
-    z-index: 10;
-  }
+.button.complete {
+  color: var(--gray-0);
+  background-color: var(--success-40);
+  border: none;
+}
   
-  .Gnb > a {
-    flex: 1;
-    text-align: center;
-    line-height: var(--gnb-H);
-  }
-  
-  .gnbLink {
-    display: block;
-    width: 100%;
-    height: 100%;
-    padding-top: var(--spacer-5);
-    color: #222;
-    text-decoration: none;
-  }
+/* === Gnb === */
+.Gnb {
+  display: flex;
+  width: 100%;
+  height: var(--gnb-H);
+  background-color: #fff;
+  box-shadow: var(--shadow-popup);  
+
+  z-index: 10;
+}
+
+.Gnb > a {
+  flex: 1;
+  text-align: center;
+  line-height: var(--gnb-H);
+}
+
+.gnbLink {
+  display: block;
+  width: 100%;
+  height: 100%;
+  padding-top: var(--spacer-5);
+  color: #222;
+  text-decoration: none;
+}
 
 
   /* === Map === */
@@ -38,21 +51,21 @@
   }
 
 
-  /* === BackButton === */
-  .BackButton {
-    width: 100%;
-    height: 100%;
-  }
-  
-  .BackButtonIcon {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: var(--size-btn-medium);
-    height: var(--size-btn-medium);
-    font-size: var(--size-icon);
-    color: var(--gray-70);
-  }
+/* === BackButton === */
+.BackButton {
+  width: 100%;
+  height: 100%;
+}
+
+.BackButtonIcon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: var(--size-btn-medium);
+  height: var(--size-btn-medium);
+  font-size: var(--size-icon);
+  color: var(--gray-70);
+}
   
 
   /* === SearchBar === */
@@ -115,4 +128,25 @@
 }
 
 
-/* === Popup === */
+/* === Modal === */
+.Modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5); /* 배경 흐리게 */
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  z-index: var(--z-index-fixed);
+} 
+
+.modalContent {
+  margin-bottom: var(--spacer-5);
+  padding: var(--spacer-6);
+  width: calc(100% - var(--spacer-5) * 2);
+  background: var(--gray-0);
+  border-radius: var(--radius-square);
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
