--- a/src/assets/style/pages/List.css
+++ b/src/assets/style/pages/List.css
@@ -85,28 +85,6 @@ h2 {
     line-height: var(--size-btn-medium);
 }
 
-.popup {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5); /* 배경 흐리게 */
-    display: flex;
-    justify-content: center;
-    align-items: end;
-    z-index: var(--z-index-fixed);
-  } 
-
-.popupContent {
-    margin-bottom: var(--spacer-5);
-    padding: var(--spacer-6);
-    width: calc(100% - var(--spacer-5) * 2);
-    background: var(--gray-0);
-    border-radius: var(--radius-square);
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-}
-
 .popupActions {
     display: flex;
     justify-content: space-between;
@@ -149,21 +127,5 @@ h2 {
 
 .colorBtn.selected {
     scale: 1.4;
-    border: 3px solid black;
-}
-
-.saveBtn, .cancelBtn {
-    padding: 10px 20px;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-}
-
-.cancelBtn {
-    color: var(--gray-50);
-}
-
-.saveBtn {
-    background-color: var(--success-40);
-    color: white;
+    border: 6px solid rgba(255, 255, 255, 0.6);
 }
