supabase 실시간 감지 작업중

--- a/src/assets/style/pages/List.css
+++ b/src/assets/style/pages/List.css
@@ -110,7 +110,7 @@ h2 {
     font-size: var(--font-size-title-sm);
 }
 
-.colorPicker {
+.MyListsColorPicker {
     display: flex;
     justify-content: space-between;
     margin-top: var(--spacer-4)
