--- a/src/assets/style/components/Components.css
+++ b/src/assets/style/components/Components.css
@@ -150,3 +150,9 @@
   border-radius: var(--radius-square);
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
+
+
+/* === LocationCount === */
+.LocationCount {
+  color: var(--gray-50);
+}
