--- a/src/assets/style/pages/List.css
+++ b/src/assets/style/pages/List.css
@@ -129,3 +129,8 @@ h2 {
     scale: 1.4;
     border: 6px solid rgba(255, 255, 255, 0.6);
 }
+
+.reviews {
+    font-size: var(--font-size-title-xsm);
+    color: var(--gray-70);
+}
