--- a/src/assets/style/variables.css
+++ b/src/assets/style/variables.css
@@ -56,6 +56,20 @@
   --gray-90: #1d1d1d; /* text-title */
   --gray-100: #000000;
 
+  --primary: #246beb;
+  --primary-0: #ffffff;
+  --primary-5: #eff5ff;
+  --primary-10: #d3e1fb;
+  --primary-20: #a7c4f7;
+  --primary-30: #7ca6f3;
+  --primary-40: #5089ef; /* (3 : 1 with white) */
+  --primary-50: #246beb; /* base (4.5 : 1 with white), 입력창 활성화 */
+  --primary-60: #1d56bc;
+  --primary-70: #16408d;
+  --primary-80: #0e2b5e;
+  --primary-90: #07152f;
+  --primary-100: #000000;
+
   --success-5: #eef7f0; /* surface */
   --success-10: #cee9d4; /* border */ 
   --success-20: #b2dcbb;
