--- a/src/assets/style/components/Components.css
+++ b/src/assets/style/components/Components.css
@@ -144,14 +144,16 @@
 /* === Modal === */
 .Modal {
   position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background: rgba(0, 0, 0, 0.5); /* 배경 흐리게 */
+  top: 0; left: 50%;
   display: flex;
   justify-content: center;
   align-items: end;
+  width: 100%; height: 100%;
+  max-width: var(--width-max);
+  margin: 0 auto;
+  background: rgba(0, 0, 0, 0.5); /* 배경 흐리게 */
+  transform: translateX(-50%);
+
   z-index: var(--z-index-fixed);
 } 
 
