--- a/src/assets/style/pages/Place.css
+++ b/src/assets/style/pages/Place.css
@@ -7,5 +7,14 @@
     background-color: var(--gray-0);
     box-shadow: var(--shadow-popup);
 
-    z-index: 10;
+    z-index: var(--z-index-map-overlay);
+  }
+
+  .PlaceActionPanel {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 60px;
+    margin-top: 12px;
+    margin-bottom: 12px;
   }
