--- a/src/assets/style/variables.css
+++ b/src/assets/style/variables.css
@@ -63,6 +63,8 @@
   --gray-90: #1d1d1d; /* text-title */
   --gray-100: #000000;
 
+  --color-main: #8CD790;
+
   --primary: #246beb;
   --primary-0: #ffffff;
   --primary-5: #eff5ff;
