svg 컴포넌트 생성

--- a/src/assets/style/components/Components.css
+++ b/src/assets/style/components/Components.css
@@ -171,3 +171,13 @@
 .LocationCount {
   color: var(--gray-50);
 }
+
+.SvgIconGoogle {
+  width: var(--size-icon);
+  height: var(--size-icon);
+  fill: var(--gray-60);
+}
+
+.SvgIconGoogle.check {
+  fill: var(--color-main);
+}
